QMimeData: return null string for null byte array

This amends 589a01ff6b1eacf81e74a5fc4801572135214f43. And this is
not needed for Qt 6 due to QTextCodec was replaced by QStringConverter.

Fixes: QTBUG-84662
Change-Id: I810072108e5f843d7f8cf02b5f4c6f4ba6be0a4e
Reviewed-by: Lars Knoll <lars.knoll@qt.io>